--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<title>page
-d'accueil</title>
-
-    <title></title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title id="T">page d'accueil</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body style="background-image:
-url('https://img-s-msn-com.akamaized.net/tenant/amp/entityid/BBYyvk2.img')">
+url('https://img-s-msn-com.akamaized.net/tenant/amp/entityid/BBYyvk2.img')" onload="load()">
     <noscript>Merci d'activer JavaScript</noscript>
     <center>
       <div id="Name">Edge</div>
@@ -26,4 +24,73 @@ url('https://img-s-msn-com.akamaized.net/tenant/amp/entityid/BBYyvk2.img')">
     </table>
     <br>
   </body>
+  <script type="text/javascript">
+  function load(){
+  	
+  	var OS = "OS Inconnu"; 
+if (navigator.appVersion.indexOf("Win")!=-1) OS = "Windows"; 
+if (navigator.appVersion.indexOf("Mac")!=-1) OS = "MacOS"; 
+if (navigator.appVersion.indexOf("X11")!=-1) OS = "Unix"; 
+if (navigator.appVersion.indexOf("Linux")!=-1) OS = "Linux"; 
+
+var nVer = navigator.appVersion;
+var nAgt = navigator.userAgent;
+var browserName  = navigator.appName;
+var fullVersion  = ''+parseFloat(navigator.appVersion); 
+var majorVersion = parseInt(navigator.appVersion,10);
+var nameOffset,verOffset,ix;
+
+// In Opera, the true version is after "Opera" or after "Version"
+if ((verOffset=nAgt.indexOf("Opera"))!=-1) {
+   browserName = "Opera";
+   fullVersion = nAgt.substring(verOffset+6);
+   if ((verOffset=nAgt.indexOf("Version"))!=-1) 
+     fullVersion = nAgt.substring(verOffset+8);
+}
+// In MSIE, the true version is after "MSIE" in userAgent
+else if ((verOffset=nAgt.indexOf("MSIE"))!=-1) {
+   browserName = "Microsoft Internet Explorer";
+   fullVersion = nAgt.substring(verOffset+5);
+}
+// In Chrome, the true version is after "Chrome" 
+else if ((verOffset=nAgt.indexOf("Chrome"))!=-1) {
+   browserName = "Chrome";
+   fullVersion = nAgt.substring(verOffset+7);
+}
+// In Safari, the true version is after "Safari" or after "Version" 
+else if ((verOffset=nAgt.indexOf("Safari"))!=-1) {
+   browserName = "Safari";
+   fullVersion = nAgt.substring(verOffset+7);
+   if ((verOffset=nAgt.indexOf("Version"))!=-1) 
+     fullVersion = nAgt.substring(verOffset+8);
+}
+// In Firefox, the true version is after "Firefox" 
+else if ((verOffset=nAgt.indexOf("Firefox"))!=-1) {
+    browserName = "Firefox";
+    fullVersion = nAgt.substring(verOffset+8);
+}
+// In most other browsers, "name/version" is at the end of userAgent 
+else if ( (nameOffset=nAgt.lastIndexOf(' ')+1) < (verOffset=nAgt.lastIndexOf('/')) ) {
+    browserName = nAgt.substring(nameOffset,verOffset);
+    fullVersion = nAgt.substring(verOffset+1);
+    if (browserName.toLowerCase()==browserName.toUpperCase()) {
+       browserName = navigator.appName;
+    }
+}
+// trim the fullVersion string at semicolon/space if present
+if ((ix=fullVersion.indexOf(";"))!=-1)
+    fullVersion=fullVersion.substring(0,ix);
+if ((ix=fullVersion.indexOf(" "))!=-1)
+    fullVersion=fullVersion.substring(0,ix);
+
+majorVersion = parseInt(''+fullVersion,10);
+if (isNaN(majorVersion)) {
+    fullVersion  = ''+parseFloat(navigator.appVersion); 
+    majorVersion = parseInt(navigator.appVersion,10);
+}
+
+$("#Name").html("Page d'accueil pour "+browserName+"<br>Version: "+fullVersion+"<br>Version Complète: "+majorVersion+"<br>Agent Utilisateur: "+navigator.userAgent);
+$("#T").html("Page d'accueil pour "+browserName+" depuis "+OS);
+    }
+    </script>
 </html>
