--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p><b><span class="ui-icon ui-icon-alert" style="float:
                       left; margin-right: 0.3em;"></span></b><font color="#ff3333"><font style="font-size: 15pt"><b>
                       Avis aux Utilisateurs de Microsoft Internet Explorer <noscript>: Vous êtes concerné</noscript></b><br />
-                  Merci d'utiliser un autre navigateur au d'activer javascript.<br />
+                  Merci d'utiliser un autre navigateur ou d'activer javascript.<br />
                   Pour ceux utilisants des bon Navigateurs (edge, safari, chrome, firefox, opera...), c'est très bien !</font></font></p>
               </div>
             </div>
