--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                   Pour ceux utilisants des bon Navigateurs (edge, safari, chrome, firefox, opera...), c'est très bien !</font></font></p>
               </div>
             </div>
+<img src="https://images.pling.com/img/00/00/55/86/05/1724472/splash.png" alt="Loading..." title="Loading...">
 <script type="module" src="/JQuery/js.cookie.min.mjs"></script>
 
 <script type="module">
