--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                   Pour ceux utilisants des bon Navigateurs (edge, safari, chrome, firefox, opera...), c'est très bien !</font></font></p>
               </div>
             </div>
-<img src="https://images.pling.com/img/00/00/55/86/05/1724472/splash.png" alt="Loading..." title="Loading...">
+          <h1>Linux (Plus précisément Ubuntu & Kubuntu Plasma)</h1>
+          <iframe src="/Linux/index.Iframe.html"><a href="/Linux/">Ichi pour Linux</a></iframe>
 <script type="module" src="/JQuery/js.cookie.min.mjs"></script>
 
 <script type="module">
