--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <div id="Content"><h1>Oh ! Un client !</h1></div><input type="button" id="Suivant" onClick="next();">Suivant</input>
+    <div id="Content"><h1>Oh ! Un client !</h1></div><input type="button" value="Suivant" onClick="next();"></input>
   </body>
 <script src="//code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
 <
