--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
         <section id="main-content">
           <h1 id="ecologic-code">Ecologic Code</h1>
 
-<center style="background-color:green"><b>Nouveau ! </b>Nouveau site disponible <a href="App/Web/EcologicCodeWebSite.html">ici</a></center>
+<center style="background-color:green">Autre version du site disponible <a href="App/Web/EcologicCodeWebSite.html">ici</a></center>
 <p><br /></p>
 <link href="https://superatraction.github.io/JQuery/jquery-ui.css" rel="stylesheet" />
 <button onclick="location.href='lang.html'">Langs</button><br>
+          <a href="informatique/index.html">La partie du site Informatique (et vous y trouverez OpenCreators)
 <a href="root/OpenCreators/OpenCreators.exe">Télécharger OpenCreators</a><br>
 <a href="Web/" target="about:">Outils du site...</a>
 <div class="ui-widget">
