--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
           <h1>EcologicCode.github.io</h1>
         </a>
         <h2>Le site WebAssembly d'EcologicCode</h2>
-        <h1><a href="informatique/">Informatique</a> - <a href="Account/">Mon Compte</a> - <a href="Community/">Communauté...</a> - <a href="Tools/">Outils</a></h1>
+        <p style="color:yellow"><a href="informatique/">Informatique</a> - <a href="Account/">Mon Compte</a> - <a href="Community/">Communauté...</a> - <a href="Tools/">Outils</a></p>
           <a href="https://github.com/EcologicCode" class="button"><small>Follow me on</small> GitHub</a>
-        
       </div>
     </header>
 
