--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -68,8 +67,8 @@
 <button onclick="location.href='lang.html'">Langs</button><br>
           <a href="informatique/index.html">La partie du site Informatique (et vous y trouverez OpenCreators)
 <a href="Web/" target="about:">Outils du site...</a>
-          <h1>Linux (Plus précisément Ubuntu & Kubuntu Plasma)</h1>
-          <iframe src="/Linux/index.Iframe.html"><a href="/Linux/">Ichi pour Linux</a></iframe>
+<a href="Store_center/">Store Center : Le Store Officiel d'ExologicCode.</a>
+          <h1 onclick="location.href=\"Linux/\"">Linux (Plus précisément Ubuntu & Kubuntu Plasma)</h1>
 <script type="module" src="/JQuery/js.cookie.min.mjs"></script>
 
 <script type="module">
